--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-  "name": "react-autocomplete",
-  "version": "0.1.4",
-  "description": "Accessible, extensible, Autocomplete for React.js",
+  "name": "boom-autocomplete",
+  "version": "0.1.0",
+  "description": "Accessible, extensible, Autocomplete for React.js, built on rackt/react-autocomplete",
   "main": "./build/lib/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rackt/react-autocomplete.git"
+    "url": "https://github.com/BoomTownROI/boom-autocomplete.git"
   },
-  "homepage": "https://github.com/rackt/react-autocomplete",
-  "bugs": "https://github.com/rackt/react-autocomplete/issues",
+  "homepage": "https://github.com/BoomTownROI/boom-autocomplete",
+  "bugs": "https://github.com/BoomTownROI/boom-autocomplete/issues",
   "directories": {
     "example": "examples"
   },
   "scripts": {
-    "test": "echo 'lol'",
-    "start": "rackt server"
+    "start": "rackt server",
+    "build": "rackt build",
+    "release": "rackt release"
   },
-  "authors": [
-    "Ryan Florence <rpflorence@gmail.com>"
-  ],
   "license": "MIT",
   "devDependencies": {
     "rackt-cli": "^0.4.0",
-    "react": "^0.13.3"
+    "react": "^0.14.2"
   },
   "tags": [
     "react",
