--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,7 @@
 {
-  "name": "react-autocomplete",
-  "version": "0.1.0",
+  "name": "boom-autocomplete",
+  "version": "0.1.1",
   "homepage": "",
-  "authors": [
-    "Ryan Florence <rpflorence@gmail.com>"
-  ],
   "description": "react component",
   "main": "dist/react-autocomplete.js",
   "keywords": [
